<resources>
    <string name="app_name">Simon dice</string>
    <string name="app_author">Lisbeth González Castillo \n
    ligonzalez20@alumnos.utalca</string>
    <string name="app_description">Este proyecto es un piloto para evaluar la factibilidad de poder
        desarrollar dentro de android una aplicacion que implemente un juego Simon dice, parecido a 
        bop it.
    El celular da la intruccion que el usuario debera responder dentro de cierto tiempo
    para completar la tarea, ir avanzando niveles e intentar obtener la mayor puntuacion</string>

    <string name="about">Acerca</string>
    <string name="settings">Configuración</string>
    <string name="play">Jugar</string>

    <string name="fling">Deslizo</string>
    <string name="ontouch">Tap</string>
    <string name="press">Presiono</string>
    <string name="doAction">Realiza una accion</string>
    <string name="swing">Agito</string>

    <string name="points">Puntos: </string>
    <string name="done">Acertaste</string>
    <string name="notDone">Fallaste</string>


    <string name="victory">Victoria</string>
    <string name="defeat">Derrota</string>
    <string name="touch">Toca</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="playerData_header">Datos del Jugador</string>
    <string name="pers_header">Personalizacion del Juego</string>
    <string name="admin_header">Administracion General</string>

    <!-- Player Preferences -->
    <string name="player_name">Nombre</string>
    <string name="save_score">Guardar puntaje más alto</string>

    <!-- Game Preferences -->
    <string name="game_color">Color</string>
    <string name="game_volume">Volumen</string>
    <string name="show_instructions">Mostrar instrucciones</string>
    <string name="size">Tamaño de Botones y Texto</string>

    <string name="restore_predet">Restablecer los valore predeterminados</string>


</resources>