<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/playerData_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/player_name"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="save"
            app:title="@string/save_score"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pers_header">

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/color_entries"
            app:entryValues="@array/color_values"
            app:key="color"
            app:title="@string/game_color"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:defaultValue="100"
            app:entries="@array/volume_entries"
            app:entryValues="@array/volume_values"
            app:key="volume"
            app:title="@string/game_volume"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:defaultValue="true"
            app:entries="@array/instruction_entries"
            app:entryValues="@array/instruction_values"
            app:key="instructions"
            app:title="@string/show_instructions"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:defaultValue="50"
            app:entries="@array/size_entries"
            app:entryValues="@array/size_values"
            app:key="size"
            app:title="@string/size"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/admin_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="value"
            app:title="@string/restore_predet"/>

    </PreferenceCategory>

</PreferenceScreen>