<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/salmon"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="233dp"
        android:layout_height="69dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/darkBrown"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="286dp"
        android:layout_height="345dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
        app:srcCompat="@drawable/_856b2b24f6ae202fedf278e" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="148dp"
        android:layout_height="58dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/darkRose"
        android:text="@string/about"
        app:layout_constraintBottom_toTopOf="@+id/buttonSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="148dp"
        android:layout_height="58dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/darkRose"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAbout" />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="148dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/darkRose"
        android:text="@string/play"
        app:layout_constraintBottom_toTopOf="@+id/buttonAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.152" />

</androidx.constraintlayout.widget.ConstraintLayout>