<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aqua"
    tools:context=".MusicActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="258dp"
        android:layout_height="280dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/_486052604_musicsocialnetworkbrandlogo_79159" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="238dp"
        android:layout_height="55dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="12dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPlayMusic"
        android:layout_width="142dp"
        android:layout_height="52dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="135dp"
        android:backgroundTint="@color/darkRose"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonDefeat"
        android:layout_width="141dp"
        android:layout_height="52dp"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="99dp"
        android:backgroundTint="@color/darkRose"
        android:text="@string/defeat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonVictory"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/darkRose"
        android:text="@string/victory"
        app:layout_constraintBottom_toTopOf="@+id/buttonDefeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlayMusic" />

</androidx.constraintlayout.widget.ConstraintLayout>